# archagents

./: .gitignore  README.md
sentinel/agents/core/: pyproject.toml
sentinel/agents/core/agent_core/: __init__.py  cache.py
sentinel/agents/core/tests/: test_complexity_ast.py  test_confidence.py  test_correlation_engine.py  test_fingerprint.py  test_llm_anthropic.py  test_llm_budget.py  test_llm_fallback.py  test_llm_provider.py  test_scrubbing_base.py  test_scrubbing_registry.py  test_search.py  test_signals.py  test_sse.py  test_treesitter.py
sentinel/agents/formal-verification/: Dockerfile  pyproject.toml
sentinel/agents/formal-verification/sentinel_fv/: __main__.py  abstract_interp.py  agent.py  annotation_extractor.py  call_graph.py  config.py  finding_builder.py  frontend.py  property_inferer.py  smt_bridge.py  types.py  vc_generator.py
sentinel/agents/formal-verification/tests/: test_abstract_interp.py  test_agent.py  test_annotation_extractor.py  test_call_graph.py  test_config.py  test_finding_builder.py  test_frontend.py  test_property_inferer.py  test_smt_bridge.py  test_types.py  test_vc_generator.py
sentinel/agents/framework/: Dockerfile  pyproject.toml
sentinel/agents/framework/sentinel_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sentinel/agents/framework/sentinel_agents/: __init__.py  base.py  events.py  orchestrator.py  runner.py  types.py
sentinel/agents/framework/tests/: test_base.py  test_events.py  test_orchestrator.py  test_runner_retry.py  test_runner_wal.py  test_types.py
sentinel/agents/ip-license/: Dockerfile  pyproject.toml
sentinel/agents/ip-license/data/: oss_fingerprints.db  oss_fingerprints.json  seed_corpus.py
sentinel/agents/ip-license/sentinel_ip_license_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sentinel/agents/ip-license/sentinel_license/: __init__.py  __main__.py  agent.py  corpus_builder.py  evidence.py  fingerprint.py  fingerprint_db.py  minhash.py  registry_lookup.py  sbom.py  spdx_detector.py  sync_fingerprints.py
sentinel/agents/ip-license/tests/: test_agent.py  test_binary.py  test_compatibility.py  test_corpus_builder.py  test_evidence.py  test_evidence_publish.py  test_fingerprint.py  test_fingerprint_db.py  test_fuzzy_matching.py  test_minhash.py  test_registry_lookup.py  test_sbom.py  test_spdx.py  test_sync.py
sentinel/agents/policy/: Dockerfile  pyproject.toml
sentinel/agents/policy/sentinel_policy/: __init__.py  __main__.py  agent.py  drift.py  merge.py  parser.py  rules.py  schema.py
sentinel/agents/policy/sentinel_policy_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sentinel/agents/policy/tests/: test_agent.py  (+4 more)
(+864 files in other folders)
