[project]
name = "sentinel-agent-core"
version = "0.1.0"
description = "Shared enterprise capabilities for SENTINEL agents"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "litellm>=1.30",
    "tree-sitter>=0.22",
    "anthropic>=0.25",
    "openai>=1.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
