[project]
name = "sentinel-formal-verification-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sentinel-agent-framework",
    "sentinel-agent-core",
    "redis>=5.0",
    "requests>=2.28",
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
