[project]
name = "sentinel-agent-framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "sentinel-agent-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
