[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ip-license-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sentinel-agent-framework",
    "sentinel-agent-core",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
include = ["sentinel_license*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
